@@ -29,5 +29,6 @@ apm-server:
   # Comma separated list of permitted origins for frontend. User-agents will send
   # a origin header that will be validated against this list.
   # An origin is made of a protocol scheme, host and port, without the url path.
+  # Allowed origins in this setting can have * to match anything (eg.: http://*.example.com)
   # If an item in the list is a single *, everything will be allowed
   #frontend.allow_origins : *
